--- a/pages/4815.html
+++ b/pages/4815.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8280/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -1000,7 +998,7 @@ margin-left: 0em;
 
 <p>In theories pf <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> and <a class='existingWikiWord' href='/nlab/show/cosmology'>cosmology</a> a <em>cosmological constant</em> refers to an <a class='existingWikiWord' href='/nlab/show/energy'>energy</a> contribution associated with the <a class='existingWikiWord' href='/nlab/show/vacuum'>vacuum</a> itself.</p>
 
-<p>This is called a <em>cosmological constant</em> because the simplest way to see this effect in <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a> is by a summand to the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> which is proportional to the <a class='existingWikiWord' href='/nlab/show/volume'>volume</a> of <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a>, with proportionality factor some “constant” <math class='maruku-mathml' display='inline' id='mathml_65edd8dda670ff10e8bfc659ffc2bb1a2ce5047d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi></mrow><annotation encoding='application/x-tex'>\lambda</annotation></semantics></math>, as in <a class='maruku-eqref' href='#eq:EinsteinHilbertWithCosmologicalConstant'>(1)</a> below.</p>
+<p>This is called a <em>cosmological constant</em> because the simplest way to see this effect in <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a> is by a summand to the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> which is proportional to the <a class='existingWikiWord' href='/nlab/show/volume'>volume</a> of <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a>, with proportionality factor some “constant” <math class='maruku-mathml' display='inline' id='mathml_76c10c543da70a674657a753d817ecc2afabf0ad_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi></mrow><annotation encoding='application/x-tex'>\lambda</annotation></semantics></math>, as in <a class='maruku-eqref' href='#eq:EinsteinHilbertWithCosmologicalConstant'>(1)</a> below.</p>
 
 <p>See below</p>
 
@@ -1010,7 +1008,7 @@ margin-left: 0em;
 
 <p>More generally almost-constant contributions to matter fields may effectively have the same kind of effect.</p>
 
-<p>Specifically in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes#on curved spacetimes'>AQFT on curved spacetimes</a> the <a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation value</a> of the <a class='existingWikiWord' href='/nlab/show/stress-energy+tensor'>stress-energy tensor</a> of the various <a class='existingWikiWord' href='/nlab/show/matter'>matter</a>-fields receives constant or essentially constant contributions, notably from <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> freedom (e.g. <a href='#Hack15'>Hack 15, section 3.2.1</a>).</p>
+<p>Specifically in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>on curved spacetimes</a> the <a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation value</a> of the <a class='existingWikiWord' href='/nlab/show/stress-energy+tensor'>stress-energy tensor</a> of the various <a class='existingWikiWord' href='/nlab/show/matter'>matter</a>-fields receives constant or essentially constant contributions, notably from <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> freedom (e.g. <a href='#Hack15'>Hack 15, section 3.2.1</a>).</p>
 
 <p>See below</p>
 
@@ -1035,33 +1033,33 @@ margin-left: 0em;
 <h3 id='InClassicalGravity'>In classical gravity</h3>
 
 <p>In an <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a> on a space of <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifolds</a> – such as the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> functional for <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> – a <strong>cosmological constant</strong> is a term proportional to the <a class='existingWikiWord' href='/nlab/show/volume'>volume</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_65edd8dda670ff10e8bfc659ffc2bb1a2ce5047d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>cc</mi></msub><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>↦</mo><mi>λ</mi><msub><mo>∫</mo> <mi>X</mi></msub><msub><mi>dvol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_76c10c543da70a674657a753d817ecc2afabf0ad_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>cc</mi></msub><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>↦</mo><mi>λ</mi><msub><mo>∫</mo> <mi>X</mi></msub><msub><mi>dvol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   S_{cc} \;\colon\;  (X,g) \mapsto \lambda \int_X dvol_g
   \,,
 
 </annotation></semantics></math></div>
-<p>where <math class='maruku-mathml' display='inline' id='mathml_65edd8dda670ff10e8bfc659ffc2bb1a2ce5047d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\lambda \in \mathbb{R}</annotation></semantics></math> is the <em>cosmological constant</em> .</p>
+<p>where <math class='maruku-mathml' display='inline' id='mathml_76c10c543da70a674657a753d817ecc2afabf0ad_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\lambda \in \mathbb{R}</annotation></semantics></math> is the <em>cosmological constant</em> .</p>
 
 <p>For instance pure Einstein-Hilbert gravity with cosmological constant (and no other fields) is given by the functional</p>
-<div class='maruku-equation' id='eq:EinsteinHilbertWithCosmologicalConstant'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_65edd8dda670ff10e8bfc659ffc2bb1a2ce5047d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>EH</mi></msub><mo>+</mo><msub><mi>S</mi> <mi>cos</mi></msub><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>R</mi><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo>+</mo><mi>λ</mi><msub><mo>∫</mo> <mi>X</mi></msub><mi>d</mi><msub><mi>vol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation' id='eq:EinsteinHilbertWithCosmologicalConstant'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_76c10c543da70a674657a753d817ecc2afabf0ad_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>EH</mi></msub><mo>+</mo><msub><mi>S</mi> <mi>cos</mi></msub><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>R</mi><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo>+</mo><mi>λ</mi><msub><mo>∫</mo> <mi>X</mi></msub><mi>d</mi><msub><mi>vol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   
   S_{EH} + S_{cos} :  (X,g) \mapsto \int_X R\, dvol + \lambda \int_X d vol_g
   \,,
 
 </annotation></semantics></math></div>
-<p>Generically it happens that one considers action functionals where <math class='maruku-mathml' display='inline' id='mathml_65edd8dda670ff10e8bfc659ffc2bb1a2ce5047d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi></mrow><annotation encoding='application/x-tex'>\lambda</annotation></semantics></math> is in fact not a constant, but a function of other fields <math class='maruku-mathml' display='inline' id='mathml_65edd8dda670ff10e8bfc659ffc2bb1a2ce5047d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding='application/x-tex'>\phi</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_65edd8dda670ff10e8bfc659ffc2bb1a2ce5047d_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_65edd8dda670ff10e8bfc659ffc2bb1a2ce5047d_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo>,</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>λ</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><msub><mi>dvol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>Generically it happens that one considers action functionals where <math class='maruku-mathml' display='inline' id='mathml_76c10c543da70a674657a753d817ecc2afabf0ad_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi></mrow><annotation encoding='application/x-tex'>\lambda</annotation></semantics></math> is in fact not a constant, but a function of other fields <math class='maruku-mathml' display='inline' id='mathml_76c10c543da70a674657a753d817ecc2afabf0ad_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding='application/x-tex'>\phi</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_76c10c543da70a674657a753d817ecc2afabf0ad_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_76c10c543da70a674657a753d817ecc2afabf0ad_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo>,</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>λ</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><msub><mi>dvol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   S \;\colon\; (X,g,\phi) \mapsto \int_X \lambda(\phi) dvol_g
   \,.
 
 </annotation></semantics></math></div>
-<p>In this context those solutions to the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange equation</a>s are of interest in which <math class='maruku-mathml' display='inline' id='mathml_65edd8dda670ff10e8bfc659ffc2bb1a2ce5047d_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\lambda(\phi)</annotation></semantics></math> happens to be exactly or approximately constant. Many such models of not-really-constant-but-effectively-constant terms proportional to the volume are being proposed and considered in attempts to explain observed or speculated dynamics of the cosmos.</p>
+<p>In this context those solutions to the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange equation</a>s are of interest in which <math class='maruku-mathml' display='inline' id='mathml_76c10c543da70a674657a753d817ecc2afabf0ad_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\lambda(\phi)</annotation></semantics></math> happens to be exactly or approximately constant. Many such models of not-really-constant-but-effectively-constant terms proportional to the volume are being proposed and considered in attempts to explain observed or speculated dynamics of the cosmos.</p>
 
 <p>See in particular at <em><a class='existingWikiWord' href='/nlab/show/FRW+model'>FRW model</a></em> for the role of the cosmological constant in homogeneous and isotropic models as in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a>. In that context the cosmological constant is also called the <em>dark energy</em> (density), which makes up about 70% of the energy density of the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> (the rest being <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a>) and a comparatively little bit of <a class='existingWikiWord' href='/nlab/show/baryon'>baryonic</a> <a class='existingWikiWord' href='/nlab/show/matter'>matter</a>.</p>
 
 <h3 id='InPerturbativeQuantumGravity'>In perturbative quantum gravity</h3>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>QFT on curved spacetime</a> the cosmological constant receives contributions from the <a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation value</a> of the <a class='existingWikiWord' href='/nlab/show/stress-energy+tensor'>stress-energy tensor</a> of the any <a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a>. There is <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>-freedom in this contribution (<a href='#Wald78'>Wald 78</a>, <a href='#TichyFlanagan98'>Tichy-Flanagan 98</a> <a href='#Moretti01'>Moretti 01</a>).</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>on curved spacetimes</a> the cosmological constant receives contributions from the <a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation value</a> of the <a class='existingWikiWord' href='/nlab/show/stress-energy+tensor'>stress-energy tensor</a> of the any <a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a>. There is <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>-freedom in this contribution (<a href='#Wald78'>Wald 78</a>, <a href='#TichyFlanagan98'>Tichy-Flanagan 98</a> <a href='#Moretti01'>Moretti 01</a>).</p>
 
 <p>Explicitly for <a class='existingWikiWord' href='/nlab/show/FRW+model'>FRW models</a> this is discussed in (<a href='#DappiaggiFredenhagenPinamonti08'>Dappiaggi-Fredenhagen-Pinamonti 08</a>, <a href='#DappiagiHackMollerPinamonti10'>Dappiagi-Hack-Moeller-Pinamonti 10</a>). Specifically for the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> see (<a href='#Hack13'>Hack 13, around (4)</a>).</p>
 
@@ -1216,19 +1214,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  9, 2018 10:23:19 
+  Revised on April  7, 2018 15:17:54
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.229.110.1)
+  (94.220.72.39).
+  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cosmological+constant" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmological+constant/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/cosmological+constant" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmological+constant" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/cosmological+constant" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmological+constant/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/cosmological+constant" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmological+constant" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/cosmological+constant" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/cosmological+constant" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/cosmological+constant" id="view_source" rel="nofollow">Source</a>
