--- a/pages/17786.html
+++ b/pages/17786.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -378,7 +376,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/super+Lie+algebra'>super Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></li>
 </ul>
 </li>
 
@@ -473,7 +471,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></p>
 </li>
 
 <li>
@@ -558,8 +556,8 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <em>super-commutative algebra</em> is a <a class='existingWikiWord' href='/nlab/show/commutative+algebra'>commutative algebra</a> <em><a class='existingWikiWord' href='/nlab/show/internalization'>internal</a></em> to the <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal category</a> of <a class='existingWikiWord' href='/nlab/show/super+vector+space'>super vector spaces</a>, hence a <math class='maruku-mathml' display='inline' id='mathml_f2fd0f803d10e5b5b75572ba52b0b279a3ea6ac1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo stretchy='false'>/</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathbb{Z}/2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/graded+algebra'>graded</a> <a class='existingWikiWord' href='/nlab/show/associative+unital+algebra'>associative algebra</a> such that for <math class='maruku-mathml' display='inline' id='mathml_f2fd0f803d10e5b5b75572ba52b0b279a3ea6ac1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mo>,</mo><mi>b</mi></mrow><annotation encoding='application/x-tex'>a, b</annotation></semantics></math> any two elements of homogeneous degree <math class='maruku-mathml' display='inline' id='mathml_f2fd0f803d10e5b5b75572ba52b0b279a3ea6ac1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>deg</mi><mo stretchy='false'>(</mo><mi>a</mi><mo stretchy='false'>)</mo><mo>,</mo><mi>deg</mi><mo stretchy='false'>(</mo><mi>b</mi><mo stretchy='false'>)</mo><mo>∈</mo><mi>ℤ</mi><mo stretchy='false'>/</mo><mn>2</mn><mo>=</mo><mo stretchy='false'>{</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>deg(a), deg(b) \in \mathbb{Z}/2 = \{0,1\}</annotation></semantics></math>, then</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f2fd0f803d10e5b5b75572ba52b0b279a3ea6ac1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mi>b</mi><mo>=</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><msup><mo stretchy='false'>)</mo> <mrow><mi>deg</mi><mo stretchy='false'>(</mo><mi>a</mi><mo stretchy='false'>)</mo><mi>deg</mi><mo stretchy='false'>(</mo><mi>b</mi><mo stretchy='false'>)</mo></mrow></msup><mi>b</mi><mi>a</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>A <em>super-commutative algebra</em> is a <a class='existingWikiWord' href='/nlab/show/commutative+algebra'>commutative algebra</a> <em><a class='existingWikiWord' href='/nlab/show/internalization'>internal</a></em> to the <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal category</a> of <a class='existingWikiWord' href='/nlab/show/super+vector+space'>super vector spaces</a>, hence a <math class='maruku-mathml' display='inline' id='mathml_cb6464ddb8bfb22210d1dfb4e97275b0c17b1ab2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo stretchy='false'>/</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathbb{Z}/2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/graded+algebra'>graded</a> <a class='existingWikiWord' href='/nlab/show/associative+unital+algebra'>associative algebra</a> such that for <math class='maruku-mathml' display='inline' id='mathml_cb6464ddb8bfb22210d1dfb4e97275b0c17b1ab2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mo>,</mo><mi>b</mi></mrow><annotation encoding='application/x-tex'>a, b</annotation></semantics></math> any two elements of homogeneous degree <math class='maruku-mathml' display='inline' id='mathml_cb6464ddb8bfb22210d1dfb4e97275b0c17b1ab2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>deg</mi><mo stretchy='false'>(</mo><mi>a</mi><mo stretchy='false'>)</mo><mo>,</mo><mi>deg</mi><mo stretchy='false'>(</mo><mi>b</mi><mo stretchy='false'>)</mo><mo>∈</mo><mi>ℤ</mi><mo stretchy='false'>/</mo><mn>2</mn><mo>=</mo><mo stretchy='false'>{</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>deg(a), deg(b) \in \mathbb{Z}/2 = \{0,1\}</annotation></semantics></math>, then</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_cb6464ddb8bfb22210d1dfb4e97275b0c17b1ab2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mi>b</mi><mo>=</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><msup><mo stretchy='false'>)</mo> <mrow><mi>deg</mi><mo stretchy='false'>(</mo><mi>a</mi><mo stretchy='false'>)</mo><mi>deg</mi><mo stretchy='false'>(</mo><mi>b</mi><mo stretchy='false'>)</mo></mrow></msup><mi>b</mi><mi>a</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   a b = (-1)^{deg(a) deg(b)} b a 
   \,.
 
@@ -628,22 +626,27 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November 25, 2016 13:18:25 
+  Revised on April  8, 2018 12:51:32
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.138.66)
+  (46.183.103.8).
+  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/supercommutative+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/supercommutative+algebra/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/supercommutative+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/supercommutative+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/supercommutative+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/supercommutative+algebra/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/supercommutative+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/supercommutative+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/supercommutative+algebra" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/supercommutative+algebra" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/supercommutative+algebra" id="view_source" rel="nofollow">Source</a>
