--- a/pages/19100.html
+++ b/pages/19100.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      REF First Order Categorical Logic in nLab
+      REF MakkaiReyes77 in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      REF First Order Categorical Logic
+      REF MakkaiReyes77
   </h1>
 
 
@@ -292,7 +292,7 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8407/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8411/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -306,27 +306,32 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><a class='existingWikiWord' href='/nlab/show/Michael+Makkai'>Michael Makkai</a> and <a class='existingWikiWord' href='/nlab/show/Gonzalo+E.+Reyes'>Gonzalo Reyes</a>, <em>First Order Categorical Logic: Model-theoretical methods in the theory of topoi and related categories</em>, Lecture Notes in Math. <strong>611</strong>, Springer-Verlag, 1977. <a href='https://reyes-reyes.com/2018/04/02/first-order-categorical-logic-2/'>post with PDF</a></p>
+    <p>
+</p>
+
+<ul>
+<li id='MakkaiReyes77'><a class='existingWikiWord' href='/nlab/show/Michael+Makkai'>Michael Makkai</a> and <a class='existingWikiWord' href='/nlab/show/Gonzalo+E.+Reyes'>Gonzalo Reyes</a>, <em>First Order Categorical Logic: Model-theoretical methods in the theory of topoi and related categories</em>, Lecture Notes in Math. <strong>611</strong>, Springer-Verlag, 1977. re-written by Francisco Marmolejo in 2018 (<a href='https://reyes-reyes.com/2018/04/02/first-order-categorical-logic-2/'>web announcement</a>, <a href='https://marieetgonzalo.files.wordpress.com/2018/04/makkai-reyes-book.pdf'>pdf</a>)</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Created on April  9, 2018 12:42:21
-  by <a class="existingWikiWord" href="/nlab/show/Rod+McGuire">Rod Mc Guire</a>
-  (108.32.26.46).
-  See <a href="https://ncatlab.org/nlab/author/RodMcGuire" style="color: #005c19">Author — RodMcGuire</a> for an overview of the nLab pages to which RodMcGuire has contributed.
+  Revised on April 10, 2018 05:33:19
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (91.230.41.206).
+  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/REF+First+Order+Categorical+Logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/REF+MakkaiReyes77" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/REF+MakkaiReyes77/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/REF+MakkaiReyes77" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/REF+MakkaiReyes77" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
-    <a href="/nlab/print/REF+First+Order+Categorical+Logic" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/REF+MakkaiReyes77" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/REF+First+Order+Categorical+Logic" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/REF+MakkaiReyes77" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/REF+First+Order+Categorical+Logic" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/REF+MakkaiReyes77" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
