--- a/pages/4721.html
+++ b/pages/4721.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8416/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,23 +310,47 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>There are many <a class='existingWikiWord' href='/nlab/show/conjecture'>conjectures</a> due to <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>; but by <em>the Witten conjecture</em> one usually refers to the statement proven in (<a href='#Kontsevich92'>Kontsevich 92</a>).</p>
+<p>There are many <a class='existingWikiWord' href='/nlab/show/conjecture'>conjectures</a> due to <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>; but by <em>the Witten conjecture</em> one usually refers to the statement proven in (<a href='#Kontsevich92'>Kontsevich 92</a>) with new proofs due to <a href='#Mirzakhani07a'>Mirzakhani 07a</a>, <a href='#Mirzakhani07b'>Mirzakhani 07b</a> and others.</p>
 
 <p>This is about a <a class='existingWikiWord' href='/nlab/show/generating+function'>generating function</a> for <a class='existingWikiWord' href='/nlab/show/intersection+pairing'>intersection pairing</a> numbers of Mumford-Morita-Miller stable classes on the compactification of a <a class='existingWikiWord' href='/nlab/show/moduli+space+of+curves'>moduli space of punctured curves</a>. The conjecture relates them to the <a class='existingWikiWord' href='/nlab/show/Korteweg+de+Vries+equation'>Korteweg-de Vries integrable hierarchy</a>. The conjectured was formulated by <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a> based on the conjectured equivalence of the <a class='existingWikiWord' href='/nlab/show/partition+function'>partition function</a> of two models of 2-dimensional <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>quantum gravity</a> (i.e. <a class='existingWikiWord' href='/nlab/show/string'>string</a> <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldsheet</a> <a class='existingWikiWord' href='/nlab/show/field+theory'>field theories</a>), which are not manifestly equivalent.</p>
 
 <h2 id='references'>References</h2>
 
+<p>Reviews include</p>
+
+<ul>
+<li>
+<p>Claude Itzykson in <a href='http://www.ams.org/mathscinet-getitem?mr=93e:32027'>MR93e:32027</a></p>
+</li>
+
+<li>
+<p>Ali Ulas Ozgur Kisisel, <em>Integrable systems and Gromov-Witten theory</em>, p. 135–161 in: Topics in cohomological studies of algebraic varieties, Impanga lecture notes. Edited by Piotr Pragacz. Trends Math., Birkhäuser, Basel, 2005, <a href='http://www.ams.org/mathscinet-getitem?mr=2006d:14066'>MR2006d:14066</a></p>
+</li>
+
+<li id='DijkgraafWitten18'>
+<p><a class='existingWikiWord' href='/nlab/show/Robbert+Dijkgraaf'>Robbert Dijkgraaf</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Developments in Topological Gravity</em> (<a href='https://arxiv.org/abs/1804.03275'>arXiv:1804.03275</a>)</p>
+</li>
+</ul>
+
+<p>The original proof is due to</p>
+
 <ul>
 <li id='Kontsevich92'><a class='existingWikiWord' href='/nlab/show/Maxim+Kontsevich'>Maxim Kontsevich</a>, <em>Intersection theory on the moduli space of curves and the matrix Airy function</em>, Comm. Math. Phys. <strong>147</strong> (1992), no. 1, 1–23, <a href='http://projecteuclid.org/euclid.cmp/1104250524'>euclid</a>, <a href='http://193.51.104.7/~maxim/TEXTS/intersection_theory_6.pdf'>author’s pdf</a></li>
 </ul>
 
-<p>A very instructive summary is by Claude Itzykson appeared in <a href='http://www.ams.org/mathscinet-getitem?mr=93e:32027'>MR93e:32027</a> and a detailed introduction with accessible proofs is in</p>
+<p>A celebrated new proof is due to</p>
 
 <ul>
-<li>Ali Ulas Ozgur Kisisel, <em>Integrable systems and Gromov-Witten theory</em>, p. 135–161 in: Topics in cohomological studies of algebraic varieties, Impanga lecture notes. Edited by Piotr Pragacz. Trends Math., Birkhäuser, Basel, 2005, <a href='http://www.ams.org/mathscinet-getitem?mr=2006d:14066'>MR2006d:14066</a></li>
+<li id='Mirzakhani07a'>
+<p><a class='existingWikiWord' href='/nlab/show/Maryam+Mirzakhani'>Maryam Mirzakhani</a>, <em>Simple Geodesics and Weil-Petersson Volumes Of Moduli Spaces of Bordered Riemann Surfaces</em>, Invent. Math. 167 (2007) 179-222</p>
+</li>
+
+<li id='Mirzakhani07b'>
+<p><a class='existingWikiWord' href='/nlab/show/Maryam+Mirzakhani'>Maryam Mirzakhani</a>, <em>Weil-Petersson Volumes And Intersection Theory On The Moduli Space Of Curves</em>, Journal of the American Mathematical Society 20 (2007) 1-23</p>
+</li>
 </ul>
 
-<p>Some of the newer approaches to the proof:</p>
+<p>Some of the other newer approaches to the proof:</p>
 
 <ul>
 <li>M. E. Kazarian, S. K. Lando, <em>An algebro-geometric proof of Witten’s conjecture</em></li>
@@ -353,19 +375,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 20, 2017 09:46:47 
+  Revised on April 11, 2018 08:55:48
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.24.246.146)
+  (91.230.41.202).
+  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Witten+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Witten+conjecture/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Witten+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Witten+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Witten+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Witten+conjecture/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Witten+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Witten+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Witten+conjecture" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Witten+conjecture" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Witten+conjecture" id="view_source" rel="nofollow">Source</a>
