--- a/pages/19101.html
+++ b/pages/19101.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      ADE singularity in nLab
+      Peter Slodowy in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      ADE singularity
+      Peter Slodowy
   </h1>
 
 
@@ -292,7 +292,7 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/6715/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8417/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -306,118 +306,31 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#in_the_context_of_string_compactifications'>In the context of string compactifications</a></li></ul></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>An <em>ADE singularity</em> is a <a class='existingWikiWord' href='/nlab/show/orbifold'>orbifold</a> fixed point locally of the form <math class='maruku-mathml' display='inline' id='mathml_38b5414cc1589ec949478d53d9a9b33cb9ae5c47_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℂ</mi> <mn>2</mn></msup><mo stretchy='false'>/</mo><mi>Γ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{C}^2/\Gamma</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_38b5414cc1589ec949478d53d9a9b33cb9ae5c47_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi><mo>↪</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Gamma \hookrightarrow SU(2)</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/finite+group'>finite</a> <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> of the <a class='existingWikiWord' href='/nlab/show/special+unitary+group'>special unitary group</a> given by the <a class='existingWikiWord' href='/nlab/show/ADE+classification'>ADE classification</a> (and <math class='maruku-mathml' display='inline' id='mathml_38b5414cc1589ec949478d53d9a9b33cb9ae5c47_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SU(2)</annotation></semantics></math> is understood with its defining linear <a class='existingWikiWord' href='/nlab/show/action'>action</a> on the <a class='existingWikiWord' href='/nlab/show/complex+number'>complex</a> <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> <math class='maruku-mathml' display='inline' id='mathml_38b5414cc1589ec949478d53d9a9b33cb9ae5c47_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℂ</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{C}^2</annotation></semantics></math>).</p>
-<div style='float: left; margin: 0 10px 10px 0;'><img alt='ADE 2Cycle' src='http://ncatlab.org/nlab/files/ADE2Cycle.jpeg' width='200'/></div>
-<p>These singularities have <a class='existingWikiWord' href='/nlab/show/resolution+of+singularities'>crepant resolutions</a>, obtained by repeatedly <a class='existingWikiWord' href='/nlab/show/resolution+of+singularities'>blowing up</a> at singular points. The resulting exceptional fiber (the blow-up of the singular point, an <a class='existingWikiWord' href='/nlab/show/ALE+space'>ALE space</a>) is a <a class='existingWikiWord' href='/nlab/show/union'>union</a> of <a class='existingWikiWord' href='/nlab/show/Riemann+sphere'>Riemann spheres</a> that touch each other such as to form the shape of the corresponding <a class='existingWikiWord' href='/nlab/show/Dynkin+diagram'>Dynkin diagram</a>.</p>
-
-<blockquote>
-<p>(graphics grabbed from <a href='string+phenomenology#Wijnholt14'>Wijnholt 14, part III</a>)</p>
-</blockquote>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
+    <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/singularity'>singularity</a></p>
+<p><a href='https://en.wikipedia.org/wiki/Peter_Slodowy'>English Wikipedia entry</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quiver+gauge+theory'>quiver gauge theory</a></p>
+<p><a href='https://de.wikipedia.org/wiki/Peter_Slodowy'>German Wikipedia entry</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/M-theory+on+G2-manifolds'>M-theory on G2-manifolds</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/D7-brane'>D7-brane</a></p>
+<p><a href='http://www.genealogy.ams.org/id.php?id=18259'>Mathematics Genealogy Page</a></p>
 </li>
 </ul>
 
-<h2 id='references'>References</h2>
-
-<h3 id='general'>General</h3>
-
-<p>A textbook account is in</p>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_6c86e5d3b8ae2a39e73b4ee65a42410c41df7891_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li id='Slodowy80'><a class='existingWikiWord' href='/nlab/show/Peter+Slodowy'>Peter Slodowy</a>, <em>Simple singularities and simple algebraic groups</em>, in Lecture Notes in Mathematics 815, Springer, Berlin, 1980.</li>
+<li><a class='existingWikiWord' href='/nlab/show/ADE+singularity'>ADE singularity</a></li>
 </ul>
 
-<p>Reviews and lecture notes include</p>
-
-<ul>
-<li>
-<p><em><a href='http://www.mathematik.uni-kl.de/~zca/Reports_on_ca/29/paper_html/node10.html'>Classification of singularities</a></em></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Miles+Reid'>Miles Reid</a>, <em>The Du Val Singularities <math class='maruku-mathml' display='inline' id='mathml_38b5414cc1589ec949478d53d9a9b33cb9ae5c47_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>A_n</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_38b5414cc1589ec949478d53d9a9b33cb9ae5c47_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>D</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>D_n</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_38b5414cc1589ec949478d53d9a9b33cb9ae5c47_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>6</mn></msub></mrow><annotation encoding='application/x-tex'>E_6</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_38b5414cc1589ec949478d53d9a9b33cb9ae5c47_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>7</mn></msub></mrow><annotation encoding='application/x-tex'>E_7</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_38b5414cc1589ec949478d53d9a9b33cb9ae5c47_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>8</mn></msub></mrow><annotation encoding='application/x-tex'>E_8</annotation></semantics></math></em> (<a href='http://homepages.warwick.ac.uk/~masda/surf/more/DuVal.pdf'>pdf</a>)</p>
-</li>
-
-<li>
-<p>Anda Degeratu, <em>Crepant Resolutions of Calabi-Yau Orbifolds</em>, 2004 (<a href='https://home.mathematik.uni-freiburg.de/degeratu/crepant.pdf'>pdf</a>)</p>
-</li>
-
-<li>
-<p>Fabio Perroni, <em>Orbifold Cohomology of ADE-singularities</em> (<a href='http://mathweb.uzh.ch/fileadmin/math/preprints/10-06.pdf'>pdf</a>)</p>
-</li>
-
-<li id='Siegel14'>
-<p>Kyler Siegel, section 6 of <em>The Ubiquity of the ADE classification in Nature</em> , 2014 (<a href='http://math.stanford.edu/~ksiegel/ADEClassifications.pdf'>pdf</a>)</p>
-</li>
-
-<li>
-<p>MathOverflow, <em><a href='http://mathoverflow.net/q/186368/381'>Resolving ADE singularities by blowing up</a></em></p>
-</li>
-</ul>
-
-<p>Families of examples of <a class='existingWikiWord' href='/nlab/show/G2+manifold'>G2 orbifolds</a> with ADE singularities are constructed in</p>
-
-<ul>
-<li id='Reidegeld15'><a class='existingWikiWord' href='/nlab/show/Frank+Reidegeld'>Frank Reidegeld</a>, <em><math class='maruku-mathml' display='inline' id='mathml_38b5414cc1589ec949478d53d9a9b33cb9ae5c47_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-orbifolds from K3 surfaces with ADE-singularities</em> (<a href='http://arxiv.org/abs/1512.05114'>arXiv:1512.05114</a>)</li>
-</ul>
-
-<h3 id='in_the_context_of_string_compactifications'>In the context of string compactifications</h3>
-
-<ul>
-<li id='Sen97'>
-<p><a class='existingWikiWord' href='/nlab/show/Ashoke+Sen'>Ashoke Sen</a>, <em>A Note on Enhanced Gauge Symmetries in M- and String Theory</em>, JHEP 9709:001,1997 (<a href='http://arxiv.org/abs/hep-th/9707123'>arXiv:hep-th/9707123</a>)</p>
-</li>
-
-<li id='IbanezUranga12'>
-<p><a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, <a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, section 6.3.3 of <em><a class='existingWikiWord' href='/nlab/show/String+Theory+and+Particle+Physics+--+An+Introduction+to+String+Phenomenology'>String Theory and Particle Physics -- An Introduction to String Phenomenology</a></em>, Cambridge University Press 2012</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Martin+Wijnholt'>Martin Wijnholt</a>, slides 6-10 of <em>String compactification</em>, PITP 2014 (<a href='https://pitp2014.ias.edu/sites/pitp2014.ias.edu/files/PITP2014_P3_wijnholt.pdf'>pdf</a>)</p>
-</li>
-</ul>
-
-<p>See also at <em><a class='existingWikiWord' href='/nlab/show/F-branes+--+table'>F-branes -- table</a></em></p>
-
-<p>
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on April 11, 2018 09:15:17
+  Created on April 11, 2018 09:17:46
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.202).
   See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
@@ -425,15 +338,15 @@ margin-left: 0em;
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/ADE+singularity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ADE+singularity/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/ADE+singularity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ADE+singularity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Peter+Slodowy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
 
   <span class="views">
     | Views:
-    <a href="/nlab/print/ADE+singularity" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Peter+Slodowy" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/ADE+singularity" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Peter+Slodowy" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/ADE+singularity" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Peter+Slodowy" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
