--- a/pages/7416.html
+++ b/pages/7416.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Jon Beardsley in nLab
+      Jonathan Beardsley in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,19 +283,18 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Jon Beardsley
+      Jonathan Beardsley
   </h1>
 
 
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8419/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://ncatlab.org/nlab/author/Jonathan%20Beardsley" title="Overview of nLab pages which Jonathan Beardsley has edited" style="color: black">Pages contributed to</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,28 +307,41 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Just finished PhD at <a href='http://mathematics.jhu.edu/'>JHU</a> with Jack Morava. Headed to <a href='http://www.math.washington.edu/'>UW</a> in the fall to start a 3 year Acting Assistant Professorship.</p>
+    <p>Finished PhD in 2016 at <a href='http://mathematics.jhu.edu/'>JHU</a> with <a class='existingWikiWord' href='/nlab/show/Jack+Morava'>Jack Morava</a>. Headed to <a href='http://www.math.washington.edu/'>UW</a>. Now on a 3 year Acting Assistant Professorship.</p>
 
-<p><a href='http://math.jhu.edu/~beardsle/'>Website</a></p>
+<p><a href='https://sites.math.washington.edu/~jbeards1/'>Website</a></p>
+
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_5822aba9b8ea76de9162a3d247fc30750d30677e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Grothendieck+construction'>Grothendieck construction</a></li>
+</ul>
+
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on July 17, 2016 19:52:38 
-  by <a class="existingWikiWord" href="/nlab/show/Jon+Beardsley">Jon Beardsley</a>
-  (69.143.46.47)
+  Revised on April 12, 2018 03:56:55
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (91.230.41.206).
+  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Jon+Beardsley" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jon+Beardsley/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Jon+Beardsley" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jon+Beardsley" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Jonathan+Beardsley" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jonathan+Beardsley/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Jonathan+Beardsley" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jonathan+Beardsley" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
-    <a href="/nlab/print/Jon+Beardsley" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
-    <a href="/nlab/tex/Jon+Beardsley" id="view_tex" rel="nofollow">TeX</a>
+    | Views:
+    <a href="/nlab/print/Jonathan+Beardsley" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/source/Jon+Beardsley" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/tex/Jonathan+Beardsley" id="view_tex" rel="nofollow">TeX</a>
+    |
+    <a href="/nlab/source/Jonathan+Beardsley" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
