--- a/pages/19061.html
+++ b/pages/19061.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -577,12 +577,12 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_fe6bd13e86781981342998801feb0ec7de451ee5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</a></li><li><a href='#refernces'>Refernces</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_916c78513dd720d8434f61446eac3191c8612999_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>What has come to be called <em>nonabelian T-duality</em> (<a href='#OssaQuevedo92'>Ossa-Quevedo 92</a>) <em>Poisson-Lie T-Duality</em> (due to <a href='#KlimcikSevera95'>Klimcik-Ševera 95</a>, <a href='#vonUnge02'>von Unge 02</a>) is a generalization of <a class='existingWikiWord' href='/nlab/show/T-duality'>T-duality</a> from <a class='existingWikiWord' href='/nlab/show/fiber+bundle'>fiber bundles</a> equipped with an <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian group</a> of <a class='existingWikiWord' href='/nlab/show/isometry'>isometries</a> (<a class='existingWikiWord' href='/nlab/show/torus'>torus</a> <a class='existingWikiWord' href='/nlab/show/bundle'>bundles</a>) to those with a <a class='existingWikiWord' href='/nlab/show/non-abelian+group'>nonabelian group</a> of isometries.</p>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_fe6bd13e86781981342998801feb0ec7de451ee5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_916c78513dd720d8434f61446eac3191c8612999_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -594,7 +594,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='refernces'>Refernces</h2>
+<h2 id='references'>References</h2>
 
 <p>The original articles are</p>
 
@@ -629,15 +629,15 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 12, 2018 05:53:19
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (91.230.41.206).
-  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
+  Revised on April 12, 2018 06:39:16
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (129.12.18.176).
+  See <a href="https://ncatlab.org/nlab/author/David Corfield" style="color: #005c19">Author — David Corfield</a> for an overview of the nLab pages to which David Corfield has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Poisson-Lie+T-duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Poisson-Lie+T-duality/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Poisson-Lie+T-duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Poisson-Lie+T-duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Poisson-Lie+T-duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Poisson-Lie+T-duality/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Poisson-Lie+T-duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Poisson-Lie+T-duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
